@@ -1,6 +1,6 @@
 Gem::Specification.new do |s|
   s.name        = 'parallel_http'
-  s.version     = '0.0.9'
+  s.version     = '0.0.11'
   s.date        = '2013-02-14'
   s.summary     = "Parallel HTTP calls"
   s.description = "Make parallel http calls using EventMachine under the hood"
